[iOS] Reset the FullscreenModel when a WebState is shown.

This is a later signal than the WebStateList change, and catches updates
to the toolbar heights that may have occurred while displaying the new
WebState.

Bug: 917341
Change-Id: If26dd861ab7d3bb6fc2ebab2e319f6e80a96f565
Reviewed-on: https://chromium-review.googlesource.com/c/1404421
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#621428}
Former-commit-id: 9e67ec182d16c4d4619ff941a7e71a93e3d07cff